--- a/src/Components/Translations/hy.json
+++ b/src/Components/Translations/hy.json
@@ -455,5 +455,13 @@
   "Առանձնատուն Վաճառք": "Վաճառվում է առանձնատուն",
   "Վաճառք": "Վաճառվում է",
   "Վարձ": "Վարձով",
-  "Օրավարձ": "Օրավարձ"
+  "Օրավարձ": "Օրավարձ",
+  "Առանձնատուն Օրավարձ": "Օրավարձով առանձնատուն",
+  "Բնակարան Օրավարձ": "Օրավարձով բնակարան",
+  "Կոմերցիոն Օրավարձ": "Օրավարձով կոմերցիոն տարածք",
+  "Հողատարածք Օրավարձ": "Օրավարձով Հողատարածք",
+  "Հոսթել Օրավարձ": "Օրավարձով Հոսթել",
+  "Հյուրատուն Օրավարձ": "Օրավարձով Հյուրատուն",
+  "Հյուրանոց Օրավարձ": "Օրավարձով Հյուրանոց"
+
 }
