--- a/src/Components/Translations/ru.json
+++ b/src/Components/Translations/ru.json
@@ -457,5 +457,12 @@
   "Առանձնատուն Վաճառք": "Продается частный дом",
   "Վաճառք": "Продается",
   "Վարձ": "Aрендa",
-  "Օրավարձ": "Ежедневно"
+  "Օրավարձ": "Ежедневно",
+  "Առանձնատուն Օրավարձ": "Частный дом в посуточную аренду",
+  "Բնակարան Օրավարձ": "Квартира посуточно",
+  "Կոմերցիոն Օրավարձ": "Коммерческое помещение в посуточную аренду",
+  "Հողատարածք Օրավարձ": "Земля в посуточную аренду",
+  "Հոսթել Օրավարձ": "Хостел с посуточной арендой",
+  "Հյուրատուն Օրավարձ": "Гостевой дом с посуточной арендой",
+  "Հյուրանոց Օրավարձ": "Отель с посуточной арендой"
 }
