--- a/src/Components/Translations/hy.json
+++ b/src/Components/Translations/hy.json
@@ -1,6 +1,6 @@
 {
   "SALE": "Վաճառք",
-  "RENT": "Վարձով",
+  "RENT": "Վարձակալություն",
   "CONTACT": "Կապ",
   "BUY": "Վաճառք",
   "RENTING": "Վարձով",
