fixed media issue

--- a/src/Components/Translations/hy.json
+++ b/src/Components/Translations/hy.json
@@ -1,6 +1,7 @@
 {
   "SALE": "Վաճառք",
   "RENT": "Վարձակալություն",
+  "FOR_RENT": "Վարձ",
   "CONTACT": "Կապ",
   "BUY": "Վաճառք",
   "RENTING": "Վարձով",
